// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render DatasetItemsList correctly sortField equal title 1`] = `
<div>
  <div
    className="d-flex mb-3"
  >
    <button
      className="fdk-button fdk-button-cta"
      onClick={[Function]}
    >
      <i
        className="fa fa-plus fdk-color0 mr-2"
      />
      Legg til ny datasettbeskrivelse
    </button>
    <button
      className="ml-2 transparentButton"
      onClick={[Function]}
    >
      <i
        className="fa fa-plus fdk-color1 mr-2"
      />
      Importer datasett
    </button>
  </div>
  <div
    className="fdk-datasets-list-header d-flex"
  >
    <div
      className="d-flex align-items-center w-75"
    >
      <span
        className="header-item mr-1"
      >
        Tittel på datasett
      </span>
      <SortButtons
        field="title"
        onSortField={[Function]}
        sortField="title"
        sortType=""
      />
    </div>
    <div
      className="d-flex align-items-center w-25"
    >
      <span
        className="header-item mr-1"
      >
        Status
      </span>
      <SortButtons
        field="registrationStatus"
        onSortField={[Function]}
        sortField="title"
        sortType=""
      />
    </div>
  </div>
  <DatasetItemsListItem
    catalogId="123"
    item={
      Object {
        "_lastModified": "2018-05-07T10:36:20.388+0000",
        "accessRights": Object {
          "prefLabel": Object {},
          "uri": "http://publications.europa.eu/resource/authority/access-right/NON_PUBLIC",
        },
        "accrualPeriodicity": Object {
          "code": "ANNUAL",
          "prefLabel": Object {},
          "uri": "http://publications.europa.eu/resource/authority/frequency/ANNUAL",
        },
        "catalogId": "910244132",
        "conformsTo": Array [
          Object {
            "extraType": null,
            "prefLabel": Object {
              "nb": "test",
            },
            "uri": "",
          },
        ],
        "contactPoint": Array [
          Object {
            "email": "epost@kontakskjema.no",
            "hasTelephone": "12345678",
            "hasURL": "https://www.google.no",
            "organizationUnit": "Kontaktpunkt",
          },
        ],
        "description": Object {
          "nb": "tester",
        },
        "distribution": Array [
          Object {
            "accessURL": Array [
              "http://google.no",
            ],
            "conformsTo": Array [
              Object {
                "prefLabel": Object {
                  "nb": "Standard",
                },
                "uri": "http://google.no",
              },
            ],
            "description": Object {
              "nb": "Beskrivelse av distribusjon",
            },
            "format": Array [
              "json",
              "xml",
            ],
            "id": "",
            "license": Object {
              "extraType": null,
              "prefLabel": null,
              "uri": "http://creativecommons.org/publicdomain/zero/1.0/",
            },
            "page": Array [
              Object {
                "extraType": null,
                "prefLabel": Object {
                  "nb": "",
                },
                "uri": "https://google.com",
              },
            ],
            "type": "API",
          },
        ],
        "frequencyItems": null,
        "hasAccuracyAnnotation": Object {
          "hasBody": Object {
            "nb": "Nøyaktighet",
          },
          "inDimension": "iso:Accuracy",
          "motivatedBy": "dqv:qualityAssessment",
        },
        "hasAvailabilityAnnotation": Object {
          "hasBody": Object {
            "nb": "Tilgjengelighet",
          },
          "inDimension": "iso:Availability",
          "motivatedBy": "dqv:qualityAssessment",
        },
        "hasCompletenessAnnotation": Object {
          "hasBody": Object {
            "nb": "Kompletthet",
          },
          "inDimension": "iso:Completeness",
          "motivatedBy": "dqv:qualityAssessment",
        },
        "hasCurrentnessAnnotation": Object {
          "hasBody": Object {
            "nb": "Aktualitet",
          },
          "inDimension": "iso:Currentness",
          "motivatedBy": "dqv:qualityAssessment",
        },
        "hasRelevanceAnnotation": Object {
          "hasBody": Object {
            "nb": "Relevans",
          },
          "inDimension": "iso:Relevance",
          "motivatedBy": "dqv:qualityAssessment",
        },
        "id": "084f747f-04a9-460e-b07e-ee74c60a2086",
        "informationModel": Array [
          Object {
            "extraType": null,
            "prefLabel": Object {
              "nb": "test",
            },
            "uri": "http://google.no",
          },
        ],
        "issued": null,
        "keyword": Array [
          Object {
            "nb": "søkeord",
          },
        ],
        "landingPage": Array [
          "",
        ],
        "language": Array [],
        "legalBasisForAccess": Array [
          Object {
            "extraType": null,
            "prefLabel": Object {
              "nb": "utlevering",
            },
            "uri": "http://google.no",
          },
        ],
        "legalBasisForProcessing": Array [
          Object {
            "extraType": null,
            "prefLabel": Object {
              "nb": "behandling",
            },
            "uri": "http://google.no",
          },
        ],
        "legalBasisForRestriction": Array [
          Object {
            "extraType": null,
            "prefLabel": Object {
              "nb": "skjerming",
            },
            "uri": "http://google.no",
          },
        ],
        "modified": null,
        "objective": Object {
          "nb": "",
        },
        "openLicenseItems": Array [
          Object {
            "code": "CC BY 4.0",
            "prefLabel_no": "Creative Commons Navngivelse 4.0 Internasjonal",
            "uri": "http://creativecommons.org/licenses/by/4.0/",
          },
          Object {
            "code": "CC0 1.0",
            "prefLabel_no": "Creative Commons Universal Fristatus-erklæring",
            "uri": "http://creativecommons.org/publicdomain/zero/1.0/",
          },
          Object {
            "code": "NLOD",
            "prefLabel_no": "Norsk lisens for offentlige data",
            "uri": "http://data.norge.no/nlod/",
          },
        ],
        "provenance": Object {},
        "provenanceItems": null,
        "publisher": Object {
          "name": "RAMSUND OG ROGNAN REVISJON",
          "uri": "http://data.brreg.no/enhetsregisteret/enhet/910244132",
        },
        "references": Array [
          Object {
            "referenceType": Object {
              "code": "isPartOf",
              "prefLabel": Object {},
              "uri": "dct:isPartOf",
            },
            "source": Object {
              "extraType": null,
              "prefLabel": null,
              "uri": "http://brreg.no/catalogs/910244132/datasets/0aa1861a-9af0-4388-a81e-6b05de0fb63e",
            },
          },
        ],
        "registrationStatus": "PUBLISH",
        "sample": Array [
          Object {
            "accessURL": Array [],
            "conformsTo": Array [],
            "description": Object {
              "nb": "",
            },
            "format": Array [],
            "id": "",
            "license": Object {
              "extraType": null,
              "prefLabel": Object {
                "nb": "",
              },
              "uri": "",
            },
            "page": Array [
              Object {
                "extraType": null,
                "prefLabel": Object {
                  "nb": "",
                },
                "uri": "",
              },
            ],
            "type": "API",
          },
        ],
        "spatial": Array [
          Object {
            "uri": "Oslo",
          },
        ],
        "subject": Array [
          Object {
            "altLabel": null,
            "creator": Object {
              "uri": "http://data.brreg.no/enhetsregisteret/enhet/974760673",
            },
            "datasets": null,
            "definition": Object {
              "no": "alt som er registrert med et organisasjonsnummer ",
            },
            "identifier": "https://data-david.github.io/Begrep/begrep/Enhet",
            "inScheme": Array [
              "http://data-david.github.io/vokabular/Befolkning",
            ],
            "note": Object {
              "no": "Alle hovedenheter, underenheter og organisasjonsledd som er identifisert med et organisasjonsnummer.",
            },
            "prefLabel": Object {
              "no": "enhet",
            },
            "source": "https://jira.brreg.no/browse/BEGREP-208",
            "uri": "https://data-david.github.io/Begrep/begrep/Enhet",
          },
        ],
        "temporal": Array [
          Object {},
        ],
        "theme": Array [
          Object {
            "title": Object {
              "nb": "",
            },
            "uri": "",
          },
          Object {
            "title": Object {
              "nb": "Jordbruk, fiskeri, skogbruk og mat",
            },
            "uri": "http://publications.europa.eu/resource/authority/data-theme/AGRI",
          },
        ],
        "title": Object {
          "nb": "test ois",
        },
        "type": "Data",
        "uri": "http://brreg.no/catalogs/910244132/datasets/084f747f-04a9-460e-b07e-ee74c60a2086",
      }
    }
    key="084f747f-04a9-460e-b07e-ee74c60a2086"
  />
  <AppImportModal
    body="DCAT-modellen som blir importert må inneholde en katalog som har samme organisasjonsnr som katalogen du redigerer. Kun datasett som er med i denne katalogen vil bli importert."
    btnCancel="Avbryt"
    btnConfirm="Importer"
    className={null}
    handleAction={[Function]}
    modal={false}
    setURL="Angi url til DCAT ressurs:"
    title="Importer datasett fra DCAT RDF ressurs."
    toggle={[Function]}
  />
</div>
`;

exports[`should render DatasetItemsList correctly sortField equal title 2`] = `
<div>
  <div
    className="d-flex mb-3"
  >
    <button
      className="fdk-button fdk-button-cta"
      onClick={[Function]}
    >
      <i
        className="fa fa-plus fdk-color0 mr-2"
      />
      Legg til ny datasettbeskrivelse
    </button>
    <button
      className="ml-2 transparentButton"
      onClick={[Function]}
    >
      <i
        className="fa fa-plus fdk-color1 mr-2"
      />
      Importer datasett
    </button>
  </div>
  <div
    className="fdk-datasets-list-header d-flex"
  >
    <div
      className="d-flex align-items-center w-75"
    >
      <span
        className="header-item mr-1"
      >
        Tittel på datasett
      </span>
      <SortButtons
        field="title"
        onSortField={[Function]}
        sortField="registrationStatus"
        sortType=""
      />
    </div>
    <div
      className="d-flex align-items-center w-25"
    >
      <span
        className="header-item mr-1"
      >
        Status
      </span>
      <SortButtons
        field="registrationStatus"
        onSortField={[Function]}
        sortField="registrationStatus"
        sortType=""
      />
    </div>
  </div>
  <DatasetItemsListItem
    catalogId="123"
    item={
      Object {
        "_lastModified": "2018-05-07T10:36:20.388+0000",
        "accessRights": Object {
          "prefLabel": Object {},
          "uri": "http://publications.europa.eu/resource/authority/access-right/NON_PUBLIC",
        },
        "accrualPeriodicity": Object {
          "code": "ANNUAL",
          "prefLabel": Object {},
          "uri": "http://publications.europa.eu/resource/authority/frequency/ANNUAL",
        },
        "catalogId": "910244132",
        "conformsTo": Array [
          Object {
            "extraType": null,
            "prefLabel": Object {
              "nb": "test",
            },
            "uri": "",
          },
        ],
        "contactPoint": Array [
          Object {
            "email": "epost@kontakskjema.no",
            "hasTelephone": "12345678",
            "hasURL": "https://www.google.no",
            "organizationUnit": "Kontaktpunkt",
          },
        ],
        "description": Object {
          "nb": "tester",
        },
        "distribution": Array [
          Object {
            "accessURL": Array [
              "http://google.no",
            ],
            "conformsTo": Array [
              Object {
                "prefLabel": Object {
                  "nb": "Standard",
                },
                "uri": "http://google.no",
              },
            ],
            "description": Object {
              "nb": "Beskrivelse av distribusjon",
            },
            "format": Array [
              "json",
              "xml",
            ],
            "id": "",
            "license": Object {
              "extraType": null,
              "prefLabel": null,
              "uri": "http://creativecommons.org/publicdomain/zero/1.0/",
            },
            "page": Array [
              Object {
                "extraType": null,
                "prefLabel": Object {
                  "nb": "",
                },
                "uri": "https://google.com",
              },
            ],
            "type": "API",
          },
        ],
        "frequencyItems": null,
        "hasAccuracyAnnotation": Object {
          "hasBody": Object {
            "nb": "Nøyaktighet",
          },
          "inDimension": "iso:Accuracy",
          "motivatedBy": "dqv:qualityAssessment",
        },
        "hasAvailabilityAnnotation": Object {
          "hasBody": Object {
            "nb": "Tilgjengelighet",
          },
          "inDimension": "iso:Availability",
          "motivatedBy": "dqv:qualityAssessment",
        },
        "hasCompletenessAnnotation": Object {
          "hasBody": Object {
            "nb": "Kompletthet",
          },
          "inDimension": "iso:Completeness",
          "motivatedBy": "dqv:qualityAssessment",
        },
        "hasCurrentnessAnnotation": Object {
          "hasBody": Object {
            "nb": "Aktualitet",
          },
          "inDimension": "iso:Currentness",
          "motivatedBy": "dqv:qualityAssessment",
        },
        "hasRelevanceAnnotation": Object {
          "hasBody": Object {
            "nb": "Relevans",
          },
          "inDimension": "iso:Relevance",
          "motivatedBy": "dqv:qualityAssessment",
        },
        "id": "084f747f-04a9-460e-b07e-ee74c60a2086",
        "informationModel": Array [
          Object {
            "extraType": null,
            "prefLabel": Object {
              "nb": "test",
            },
            "uri": "http://google.no",
          },
        ],
        "issued": null,
        "keyword": Array [
          Object {
            "nb": "søkeord",
          },
        ],
        "landingPage": Array [
          "",
        ],
        "language": Array [],
        "legalBasisForAccess": Array [
          Object {
            "extraType": null,
            "prefLabel": Object {
              "nb": "utlevering",
            },
            "uri": "http://google.no",
          },
        ],
        "legalBasisForProcessing": Array [
          Object {
            "extraType": null,
            "prefLabel": Object {
              "nb": "behandling",
            },
            "uri": "http://google.no",
          },
        ],
        "legalBasisForRestriction": Array [
          Object {
            "extraType": null,
            "prefLabel": Object {
              "nb": "skjerming",
            },
            "uri": "http://google.no",
          },
        ],
        "modified": null,
        "objective": Object {
          "nb": "",
        },
        "openLicenseItems": Array [
          Object {
            "code": "CC BY 4.0",
            "prefLabel_no": "Creative Commons Navngivelse 4.0 Internasjonal",
            "uri": "http://creativecommons.org/licenses/by/4.0/",
          },
          Object {
            "code": "CC0 1.0",
            "prefLabel_no": "Creative Commons Universal Fristatus-erklæring",
            "uri": "http://creativecommons.org/publicdomain/zero/1.0/",
          },
          Object {
            "code": "NLOD",
            "prefLabel_no": "Norsk lisens for offentlige data",
            "uri": "http://data.norge.no/nlod/",
          },
        ],
        "provenance": Object {},
        "provenanceItems": null,
        "publisher": Object {
          "name": "RAMSUND OG ROGNAN REVISJON",
          "uri": "http://data.brreg.no/enhetsregisteret/enhet/910244132",
        },
        "references": Array [
          Object {
            "referenceType": Object {
              "code": "isPartOf",
              "prefLabel": Object {},
              "uri": "dct:isPartOf",
            },
            "source": Object {
              "extraType": null,
              "prefLabel": null,
              "uri": "http://brreg.no/catalogs/910244132/datasets/0aa1861a-9af0-4388-a81e-6b05de0fb63e",
            },
          },
        ],
        "registrationStatus": "PUBLISH",
        "sample": Array [
          Object {
            "accessURL": Array [],
            "conformsTo": Array [],
            "description": Object {
              "nb": "",
            },
            "format": Array [],
            "id": "",
            "license": Object {
              "extraType": null,
              "prefLabel": Object {
                "nb": "",
              },
              "uri": "",
            },
            "page": Array [
              Object {
                "extraType": null,
                "prefLabel": Object {
                  "nb": "",
                },
                "uri": "",
              },
            ],
            "type": "API",
          },
        ],
        "spatial": Array [
          Object {
            "uri": "Oslo",
          },
        ],
        "subject": Array [
          Object {
            "altLabel": null,
            "creator": Object {
              "uri": "http://data.brreg.no/enhetsregisteret/enhet/974760673",
            },
            "datasets": null,
            "definition": Object {
              "no": "alt som er registrert med et organisasjonsnummer ",
            },
            "identifier": "https://data-david.github.io/Begrep/begrep/Enhet",
            "inScheme": Array [
              "http://data-david.github.io/vokabular/Befolkning",
            ],
            "note": Object {
              "no": "Alle hovedenheter, underenheter og organisasjonsledd som er identifisert med et organisasjonsnummer.",
            },
            "prefLabel": Object {
              "no": "enhet",
            },
            "source": "https://jira.brreg.no/browse/BEGREP-208",
            "uri": "https://data-david.github.io/Begrep/begrep/Enhet",
          },
        ],
        "temporal": Array [
          Object {},
        ],
        "theme": Array [
          Object {
            "title": Object {
              "nb": "",
            },
            "uri": "",
          },
          Object {
            "title": Object {
              "nb": "Jordbruk, fiskeri, skogbruk og mat",
            },
            "uri": "http://publications.europa.eu/resource/authority/data-theme/AGRI",
          },
        ],
        "title": Object {
          "nb": "test ois",
        },
        "type": "Data",
        "uri": "http://brreg.no/catalogs/910244132/datasets/084f747f-04a9-460e-b07e-ee74c60a2086",
      }
    }
    key="084f747f-04a9-460e-b07e-ee74c60a2086"
  />
  <AppImportModal
    body="DCAT-modellen som blir importert må inneholde en katalog som har samme organisasjonsnr som katalogen du redigerer. Kun datasett som er med i denne katalogen vil bli importert."
    btnCancel="Avbryt"
    btnConfirm="Importer"
    className={null}
    handleAction={[Function]}
    modal={false}
    setURL="Angi url til DCAT ressurs:"
    title="Importer datasett fra DCAT RDF ressurs."
    toggle={[Function]}
  />
</div>
`;

exports[`should render DatasetItemsList correctly with datasetItems 1`] = `
<div>
  <div
    className="d-flex mb-3"
  >
    <button
      className="fdk-button fdk-button-cta"
      onClick={[Function]}
    >
      <i
        className="fa fa-plus fdk-color0 mr-2"
      />
      Legg til ny datasettbeskrivelse
    </button>
    <button
      className="ml-2 transparentButton"
      onClick={[Function]}
    >
      <i
        className="fa fa-plus fdk-color1 mr-2"
      />
      Importer datasett
    </button>
  </div>
  <div
    className="fdk-datasets-list-header d-flex"
  >
    <div
      className="d-flex align-items-center w-75"
    >
      <span
        className="header-item mr-1"
      >
        Tittel på datasett
      </span>
      <SortButtons
        field="title"
        onSortField={[Function]}
        sortField=""
        sortType=""
      />
    </div>
    <div
      className="d-flex align-items-center w-25"
    >
      <span
        className="header-item mr-1"
      >
        Status
      </span>
      <SortButtons
        field="registrationStatus"
        onSortField={[Function]}
        sortField=""
        sortType=""
      />
    </div>
  </div>
  <DatasetItemsListItem
    catalogId="123"
    item={
      Object {
        "_lastModified": "2018-05-07T10:36:20.388+0000",
        "accessRights": Object {
          "prefLabel": Object {},
          "uri": "http://publications.europa.eu/resource/authority/access-right/NON_PUBLIC",
        },
        "accrualPeriodicity": Object {
          "code": "ANNUAL",
          "prefLabel": Object {},
          "uri": "http://publications.europa.eu/resource/authority/frequency/ANNUAL",
        },
        "catalogId": "910244132",
        "conformsTo": Array [
          Object {
            "extraType": null,
            "prefLabel": Object {
              "nb": "test",
            },
            "uri": "",
          },
        ],
        "contactPoint": Array [
          Object {
            "email": "epost@kontakskjema.no",
            "hasTelephone": "12345678",
            "hasURL": "https://www.google.no",
            "organizationUnit": "Kontaktpunkt",
          },
        ],
        "description": Object {
          "nb": "tester",
        },
        "distribution": Array [
          Object {
            "accessURL": Array [
              "http://google.no",
            ],
            "conformsTo": Array [
              Object {
                "prefLabel": Object {
                  "nb": "Standard",
                },
                "uri": "http://google.no",
              },
            ],
            "description": Object {
              "nb": "Beskrivelse av distribusjon",
            },
            "format": Array [
              "json",
              "xml",
            ],
            "id": "",
            "license": Object {
              "extraType": null,
              "prefLabel": null,
              "uri": "http://creativecommons.org/publicdomain/zero/1.0/",
            },
            "page": Array [
              Object {
                "extraType": null,
                "prefLabel": Object {
                  "nb": "",
                },
                "uri": "https://google.com",
              },
            ],
            "type": "API",
          },
        ],
        "frequencyItems": null,
        "hasAccuracyAnnotation": Object {
          "hasBody": Object {
            "nb": "Nøyaktighet",
          },
          "inDimension": "iso:Accuracy",
          "motivatedBy": "dqv:qualityAssessment",
        },
        "hasAvailabilityAnnotation": Object {
          "hasBody": Object {
            "nb": "Tilgjengelighet",
          },
          "inDimension": "iso:Availability",
          "motivatedBy": "dqv:qualityAssessment",
        },
        "hasCompletenessAnnotation": Object {
          "hasBody": Object {
            "nb": "Kompletthet",
          },
          "inDimension": "iso:Completeness",
          "motivatedBy": "dqv:qualityAssessment",
        },
        "hasCurrentnessAnnotation": Object {
          "hasBody": Object {
            "nb": "Aktualitet",
          },
          "inDimension": "iso:Currentness",
          "motivatedBy": "dqv:qualityAssessment",
        },
        "hasRelevanceAnnotation": Object {
          "hasBody": Object {
            "nb": "Relevans",
          },
          "inDimension": "iso:Relevance",
          "motivatedBy": "dqv:qualityAssessment",
        },
        "id": "084f747f-04a9-460e-b07e-ee74c60a2086",
        "informationModel": Array [
          Object {
            "extraType": null,
            "prefLabel": Object {
              "nb": "test",
            },
            "uri": "http://google.no",
          },
        ],
        "issued": null,
        "keyword": Array [
          Object {
            "nb": "søkeord",
          },
        ],
        "landingPage": Array [
          "",
        ],
        "language": Array [],
        "legalBasisForAccess": Array [
          Object {
            "extraType": null,
            "prefLabel": Object {
              "nb": "utlevering",
            },
            "uri": "http://google.no",
          },
        ],
        "legalBasisForProcessing": Array [
          Object {
            "extraType": null,
            "prefLabel": Object {
              "nb": "behandling",
            },
            "uri": "http://google.no",
          },
        ],
        "legalBasisForRestriction": Array [
          Object {
            "extraType": null,
            "prefLabel": Object {
              "nb": "skjerming",
            },
            "uri": "http://google.no",
          },
        ],
        "modified": null,
        "objective": Object {
          "nb": "",
        },
        "openLicenseItems": Array [
          Object {
            "code": "CC BY 4.0",
            "prefLabel_no": "Creative Commons Navngivelse 4.0 Internasjonal",
            "uri": "http://creativecommons.org/licenses/by/4.0/",
          },
          Object {
            "code": "CC0 1.0",
            "prefLabel_no": "Creative Commons Universal Fristatus-erklæring",
            "uri": "http://creativecommons.org/publicdomain/zero/1.0/",
          },
          Object {
            "code": "NLOD",
            "prefLabel_no": "Norsk lisens for offentlige data",
            "uri": "http://data.norge.no/nlod/",
          },
        ],
        "provenance": Object {},
        "provenanceItems": null,
        "publisher": Object {
          "name": "RAMSUND OG ROGNAN REVISJON",
          "uri": "http://data.brreg.no/enhetsregisteret/enhet/910244132",
        },
        "references": Array [
          Object {
            "referenceType": Object {
              "code": "isPartOf",
              "prefLabel": Object {},
              "uri": "dct:isPartOf",
            },
            "source": Object {
              "extraType": null,
              "prefLabel": null,
              "uri": "http://brreg.no/catalogs/910244132/datasets/0aa1861a-9af0-4388-a81e-6b05de0fb63e",
            },
          },
        ],
        "registrationStatus": "PUBLISH",
        "sample": Array [
          Object {
            "accessURL": Array [],
            "conformsTo": Array [],
            "description": Object {
              "nb": "",
            },
            "format": Array [],
            "id": "",
            "license": Object {
              "extraType": null,
              "prefLabel": Object {
                "nb": "",
              },
              "uri": "",
            },
            "page": Array [
              Object {
                "extraType": null,
                "prefLabel": Object {
                  "nb": "",
                },
                "uri": "",
              },
            ],
            "type": "API",
          },
        ],
        "spatial": Array [
          Object {
            "uri": "Oslo",
          },
        ],
        "subject": Array [
          Object {
            "altLabel": null,
            "creator": Object {
              "uri": "http://data.brreg.no/enhetsregisteret/enhet/974760673",
            },
            "datasets": null,
            "definition": Object {
              "no": "alt som er registrert med et organisasjonsnummer ",
            },
            "identifier": "https://data-david.github.io/Begrep/begrep/Enhet",
            "inScheme": Array [
              "http://data-david.github.io/vokabular/Befolkning",
            ],
            "note": Object {
              "no": "Alle hovedenheter, underenheter og organisasjonsledd som er identifisert med et organisasjonsnummer.",
            },
            "prefLabel": Object {
              "no": "enhet",
            },
            "source": "https://jira.brreg.no/browse/BEGREP-208",
            "uri": "https://data-david.github.io/Begrep/begrep/Enhet",
          },
        ],
        "temporal": Array [
          Object {},
        ],
        "theme": Array [
          Object {
            "title": Object {
              "nb": "",
            },
            "uri": "",
          },
          Object {
            "title": Object {
              "nb": "Jordbruk, fiskeri, skogbruk og mat",
            },
            "uri": "http://publications.europa.eu/resource/authority/data-theme/AGRI",
          },
        ],
        "title": Object {
          "nb": "test ois",
        },
        "type": "Data",
        "uri": "http://brreg.no/catalogs/910244132/datasets/084f747f-04a9-460e-b07e-ee74c60a2086",
      }
    }
    key="084f747f-04a9-460e-b07e-ee74c60a2086"
  />
  <AppImportModal
    body="DCAT-modellen som blir importert må inneholde en katalog som har samme organisasjonsnr som katalogen du redigerer. Kun datasett som er med i denne katalogen vil bli importert."
    btnCancel="Avbryt"
    btnConfirm="Importer"
    className={null}
    handleAction={[Function]}
    modal={false}
    setURL="Angi url til DCAT ressurs:"
    title="Importer datasett fra DCAT RDF ressurs."
    toggle={[Function]}
  />
</div>
`;

exports[`should render DatasetItemsList correctly with missing datasetItems 1`] = `
<div>
  <div
    className="d-flex mb-3"
  >
    <button
      className="fdk-button fdk-button-cta"
      onClick={[Function]}
    >
      <i
        className="fa fa-plus fdk-color0 mr-2"
      />
      Legg til ny datasettbeskrivelse
    </button>
    <button
      className="ml-2 transparentButton"
      onClick={[Function]}
    >
      <i
        className="fa fa-plus fdk-color1 mr-2"
      />
      Importer datasett
    </button>
  </div>
  <div
    className="fdk-datasets-list-header d-flex"
  >
    <div
      className="d-flex align-items-center w-75"
    >
      <span
        className="header-item mr-1"
      >
        Tittel på datasett
      </span>
      <SortButtons
        field="title"
        onSortField={[Function]}
        sortField=""
        sortType=""
      />
    </div>
    <div
      className="d-flex align-items-center w-25"
    >
      <span
        className="header-item mr-1"
      >
        Status
      </span>
      <SortButtons
        field="registrationStatus"
        onSortField={[Function]}
        sortField=""
        sortType=""
      />
    </div>
  </div>
  <DatasetItemsListItem
    catalogId="123"
    item={
      Object {
        "_lastModified": "2018-05-07T10:36:20.388+0000",
        "accessRights": Object {
          "prefLabel": Object {},
          "uri": "http://publications.europa.eu/resource/authority/access-right/NON_PUBLIC",
        },
        "accrualPeriodicity": Object {
          "code": "ANNUAL",
          "prefLabel": Object {},
          "uri": "http://publications.europa.eu/resource/authority/frequency/ANNUAL",
        },
        "catalogId": "910244132",
        "conformsTo": Array [
          Object {
            "extraType": null,
            "prefLabel": Object {
              "nb": "test",
            },
            "uri": "",
          },
        ],
        "contactPoint": Array [
          Object {
            "email": "epost@kontakskjema.no",
            "hasTelephone": "12345678",
            "hasURL": "https://www.google.no",
            "organizationUnit": "Kontaktpunkt",
          },
        ],
        "description": Object {
          "nb": "tester",
        },
        "distribution": Array [
          Object {
            "accessURL": Array [
              "http://google.no",
            ],
            "conformsTo": Array [
              Object {
                "prefLabel": Object {
                  "nb": "Standard",
                },
                "uri": "http://google.no",
              },
            ],
            "description": Object {
              "nb": "Beskrivelse av distribusjon",
            },
            "format": Array [
              "json",
              "xml",
            ],
            "id": "",
            "license": Object {
              "extraType": null,
              "prefLabel": null,
              "uri": "http://creativecommons.org/publicdomain/zero/1.0/",
            },
            "page": Array [
              Object {
                "extraType": null,
                "prefLabel": Object {
                  "nb": "",
                },
                "uri": "https://google.com",
              },
            ],
            "type": "API",
          },
        ],
        "frequencyItems": null,
        "hasAccuracyAnnotation": Object {
          "hasBody": Object {
            "nb": "Nøyaktighet",
          },
          "inDimension": "iso:Accuracy",
          "motivatedBy": "dqv:qualityAssessment",
        },
        "hasAvailabilityAnnotation": Object {
          "hasBody": Object {
            "nb": "Tilgjengelighet",
          },
          "inDimension": "iso:Availability",
          "motivatedBy": "dqv:qualityAssessment",
        },
        "hasCompletenessAnnotation": Object {
          "hasBody": Object {
            "nb": "Kompletthet",
          },
          "inDimension": "iso:Completeness",
          "motivatedBy": "dqv:qualityAssessment",
        },
        "hasCurrentnessAnnotation": Object {
          "hasBody": Object {
            "nb": "Aktualitet",
          },
          "inDimension": "iso:Currentness",
          "motivatedBy": "dqv:qualityAssessment",
        },
        "hasRelevanceAnnotation": Object {
          "hasBody": Object {
            "nb": "Relevans",
          },
          "inDimension": "iso:Relevance",
          "motivatedBy": "dqv:qualityAssessment",
        },
        "id": "084f747f-04a9-460e-b07e-ee74c60a2086",
        "informationModel": Array [
          Object {
            "extraType": null,
            "prefLabel": Object {
              "nb": "test",
            },
            "uri": "http://google.no",
          },
        ],
        "issued": null,
        "keyword": Array [
          Object {
            "nb": "søkeord",
          },
        ],
        "landingPage": Array [
          "",
        ],
        "language": Array [],
        "legalBasisForAccess": Array [
          Object {
            "extraType": null,
            "prefLabel": Object {
              "nb": "utlevering",
            },
            "uri": "http://google.no",
          },
        ],
        "legalBasisForProcessing": Array [
          Object {
            "extraType": null,
            "prefLabel": Object {
              "nb": "behandling",
            },
            "uri": "http://google.no",
          },
        ],
        "legalBasisForRestriction": Array [
          Object {
            "extraType": null,
            "prefLabel": Object {
              "nb": "skjerming",
            },
            "uri": "http://google.no",
          },
        ],
        "modified": null,
        "objective": Object {
          "nb": "",
        },
        "openLicenseItems": Array [
          Object {
            "code": "CC BY 4.0",
            "prefLabel_no": "Creative Commons Navngivelse 4.0 Internasjonal",
            "uri": "http://creativecommons.org/licenses/by/4.0/",
          },
          Object {
            "code": "CC0 1.0",
            "prefLabel_no": "Creative Commons Universal Fristatus-erklæring",
            "uri": "http://creativecommons.org/publicdomain/zero/1.0/",
          },
          Object {
            "code": "NLOD",
            "prefLabel_no": "Norsk lisens for offentlige data",
            "uri": "http://data.norge.no/nlod/",
          },
        ],
        "provenance": Object {},
        "provenanceItems": null,
        "publisher": Object {
          "name": "RAMSUND OG ROGNAN REVISJON",
          "uri": "http://data.brreg.no/enhetsregisteret/enhet/910244132",
        },
        "references": Array [
          Object {
            "referenceType": Object {
              "code": "isPartOf",
              "prefLabel": Object {},
              "uri": "dct:isPartOf",
            },
            "source": Object {
              "extraType": null,
              "prefLabel": null,
              "uri": "http://brreg.no/catalogs/910244132/datasets/0aa1861a-9af0-4388-a81e-6b05de0fb63e",
            },
          },
        ],
        "registrationStatus": "PUBLISH",
        "sample": Array [
          Object {
            "accessURL": Array [],
            "conformsTo": Array [],
            "description": Object {
              "nb": "",
            },
            "format": Array [],
            "id": "",
            "license": Object {
              "extraType": null,
              "prefLabel": Object {
                "nb": "",
              },
              "uri": "",
            },
            "page": Array [
              Object {
                "extraType": null,
                "prefLabel": Object {
                  "nb": "",
                },
                "uri": "",
              },
            ],
            "type": "API",
          },
        ],
        "spatial": Array [
          Object {
            "uri": "Oslo",
          },
        ],
        "subject": Array [
          Object {
            "altLabel": null,
            "creator": Object {
              "uri": "http://data.brreg.no/enhetsregisteret/enhet/974760673",
            },
            "datasets": null,
            "definition": Object {
              "no": "alt som er registrert med et organisasjonsnummer ",
            },
            "identifier": "https://data-david.github.io/Begrep/begrep/Enhet",
            "inScheme": Array [
              "http://data-david.github.io/vokabular/Befolkning",
            ],
            "note": Object {
              "no": "Alle hovedenheter, underenheter og organisasjonsledd som er identifisert med et organisasjonsnummer.",
            },
            "prefLabel": Object {
              "no": "enhet",
            },
            "source": "https://jira.brreg.no/browse/BEGREP-208",
            "uri": "https://data-david.github.io/Begrep/begrep/Enhet",
          },
        ],
        "temporal": Array [
          Object {},
        ],
        "theme": Array [
          Object {
            "title": Object {
              "nb": "",
            },
            "uri": "",
          },
          Object {
            "title": Object {
              "nb": "Jordbruk, fiskeri, skogbruk og mat",
            },
            "uri": "http://publications.europa.eu/resource/authority/data-theme/AGRI",
          },
        ],
        "title": Object {
          "nb": "test ois",
        },
        "type": "Data",
        "uri": "http://brreg.no/catalogs/910244132/datasets/084f747f-04a9-460e-b07e-ee74c60a2086",
      }
    }
    key="084f747f-04a9-460e-b07e-ee74c60a2086"
  />
  <AppImportModal
    body="DCAT-modellen som blir importert må inneholde en katalog som har samme organisasjonsnr som katalogen du redigerer. Kun datasett som er med i denne katalogen vil bli importert."
    btnCancel="Avbryt"
    btnConfirm="Importer"
    className={null}
    handleAction={[Function]}
    modal={false}
    setURL="Angi url til DCAT ressurs:"
    title="Importer datasett fra DCAT RDF ressurs."
    toggle={[Function]}
  />
</div>
`;

exports[`should render DatasetItemsList correctly with missing items 1`] = `
<div>
  <div
    className="d-flex mb-3"
  >
    <button
      className="fdk-button fdk-button-cta"
      onClick={[Function]}
    >
      <i
        className="fa fa-plus fdk-color0 mr-2"
      />
      Legg til ny datasettbeskrivelse
    </button>
    <button
      className="ml-2 transparentButton"
      onClick={[Function]}
    >
      <i
        className="fa fa-plus fdk-color1 mr-2"
      />
      Importer datasett
    </button>
  </div>
  <div
    className="fdk-datasets-list-header d-flex"
  >
    <div
      className="d-flex align-items-center w-75"
    >
      <span
        className="header-item mr-1"
      >
        Tittel på datasett
      </span>
      <SortButtons
        field="title"
        onSortField={[Function]}
        sortField=""
        sortType=""
      />
    </div>
    <div
      className="d-flex align-items-center w-25"
    >
      <span
        className="header-item mr-1"
      >
        Status
      </span>
      <SortButtons
        field="registrationStatus"
        onSortField={[Function]}
        sortField=""
        sortType=""
      />
    </div>
  </div>
  <div
    className="fdk-datasets-list-item d-flex"
  >
    <span
      className="fdk-text-size-small fdk-color2"
    >
      Ingen datasettbeskrivelse registrert
    </span>
  </div>
  <AppImportModal
    body="DCAT-modellen som blir importert må inneholde en katalog som har samme organisasjonsnr som katalogen du redigerer. Kun datasett som er med i denne katalogen vil bli importert."
    btnCancel="Avbryt"
    btnConfirm="Importer"
    className={null}
    handleAction={[Function]}
    modal={false}
    setURL="Angi url til DCAT ressurs:"
    title="Importer datasett fra DCAT RDF ressurs."
    toggle={[Function]}
  />
</div>
`;
